--- a/style.css
+++ b/style.css
@@ -1044,6 +1044,9 @@ span {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
 }
 
 .categGeral-rodape {
@@ -1062,8 +1065,9 @@ span {
   margin-top: 10px;
 }
 
-.categorias-rodape {
-  margin-left: 213px;
+.categorias-rodape,
+.institucional-rodape {
+  margin: 20px 10px 0 10px;
 }
 
 .final-rodape {
@@ -1236,9 +1240,10 @@ span {
     margin: 0 5px;
   }
 
-  #tendencias .container h2{
+  #tendencias .container h2 {
     margin: 35px;
   }
+
   /* O carrossel vai ocupar 100% da largura da tela */
   .todasAsMeiasBaby-CompreJunto2 {
     width: 100%;
@@ -1292,10 +1297,85 @@ span {
     width: 150px;
     height: 130px;
   }
+
   .botao-euQuero {
     width: 150px;
     height: 35px;
-}
+  }
+
+  /* RODAPÉ */
+  .container-rodape {
+    padding: 50px 50px;
+  }
+
+  .linha1-rodape,
+  .linha2-rodape {
+    display: block;
+    text-align: center;
+  }
+
+  .contatos-rodape {
+    margin-top: 40px;
+  }
+
+  .titulo-rodape {
+    text-align: center;
+    font-size: 3vh;
+  }
+
+  .texto-rodape {
+    font-size: 2.8vh;
+  }
+
+  .texto2-rodape {
+    font-size: 2.8vh;
+  }
+
+  .textoFinal-rodape {
+    font-size: 2.6vh;
+  }
+
+  .imgContatos-rodape {
+    width: 23px;
+  }
+
+  .acompanhe-rodape,
+  .institucional-rodape,
+  .categorias-rodape {
+    margin-top: 60px;
+  }
+
+  .categorias-rodape {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .final-rodape {
+    margin-top: 60px;
+  }
+
+  .imgLogo-rodape {
+    width: 150px;
+  }
+
+  .imgRedes-rodape {
+    margin: 10px;
+  }
+
+  .subCategoria1-rodape {
+    margin-right: 50px;
+  }
+
+  .categGeral-rodape {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .whats-rodape,
+  .email-rodape {
+    justify-content: center;
+    /* Centraliza o conteúdo */
+  }
 }
 
 /* Ocultar os tracinhos em telas maiores */
@@ -1394,143 +1474,5 @@ span {
     width: 100%;
     /* As imagens se ajustam ao contêiner */
     height: auto;
-  }
-
-  /* RODAPÉ */
-  .container-rodape {
-    padding: 50px 50px;
-  }
-
-  .linha1-rodape,
-  .linha2-rodape {
-    display: block;
-    text-align: center;
-  }
-
-  .contatos-rodape {
-    margin-top: 40px;
-  }
-
-  .titulo-rodape {
-    text-align: center;
-    font-size: 18px;
-  }
-
-  .acompanhe-rodape,
-  .institucional-rodape,
-  .categorias-rodape {
-    margin-top: 60px;
-  }
-
-  .categorias-rodape {
-    margin-left: 0;
-    text-align: center;
-  }
-
-  .final-rodape {
-    margin-top: 60px;
-  }
-
-  .imgLogo-rodape {
-    width: 150px;
-  }
-
-  .imgRedes-rodape {
-    margin: 10px;
-  }
-
-  .subCategoria1-rodape {
-    margin-right: 50px;
-  }
-
-  .categGeral-rodape {
-    justify-content: center;
-    align-items: center;
-  }
-
-  .whats-rodape,
-  .email-rodape {
-    justify-content: center;
-    /* Centraliza o conteúdo */
-  }
-}
-
-@media screen and (max-width: 500px) {
-
-
-
-
-
-  .container-rodape {
-      padding: 50px 50px;
-  }
-
-  .linha1-rodape,
-  .linha2-rodape {
-      display: block;
-      text-align: center;
-  }
-
-  .contatos-rodape {
-      margin-top: 40px;
-  }
-
-  .titulo-rodape {
-      text-align: center;
-      font-size: 3vh;
-  }
-
-  .texto-rodape {
-      font-size: 2.8vh;
-  }
-
-  .texto2-rodape {
-      font-size: 2.8vh;
-  }
-
-  .textoFinal-rodape {
-      font-size: 2.6vh;
-  }
-
-  .imgContatos-rodape {
-      width: 23px;
-  }
-
-  .acompanhe-rodape,
-  .institucional-rodape,
-  .categorias-rodape {
-      margin-top: 60px;
-  }
-
-  .categorias-rodape {
-      margin-left: 0;
-      text-align: center;
-  }
-
-  .final-rodape {
-      margin-top: 60px;
-  }
-
-  .imgLogo-rodape {
-      width: 150px;
-  }
-
-  .imgRedes-rodape {
-      margin: 10px;
-  }
-
-  .subCategoria1-rodape {
-      margin-right: 50px;
-  }
-
-  .categGeral-rodape {
-      justify-content: center;
-      align-items: center;
-  }
-
-  .whats-rodape,
-  .email-rodape {
-      justify-content: center;
-      /* Centraliza o conteúdo */
   }
 }
